2010-09-21	Regis Balzard <rbalzard@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt:
	Updated documentation for FreeRadius 1.x and added some for 2.x. 
	Fixes bug #1036;
	http://www.packetfence.org/bugs/view.php?id=1036

	* pf/docs/PacketFence_Administration_Guide.odt:
	Updated (for clarification purpose) documentation for Cisco stacked 
	and 4500 Series switches. Fixes bug #1037;
	http://www.packetfence.org/bugs/view.php?id=1037

2010-09-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/pdp.cgi, pf/cgi-bin/redir.cgi, pf/cgi-bin/register.cgi, 
	pf/cgi-bin/release.cgi, pf/html/admin/administration/adduser.php, 
	pf/html/admin/administration/index.php, 
	pf/html/admin/administration/services.php, 
	pf/html/admin/administration/ui_options.php, 
	pf/html/admin/administration/version.php, 
	pf/html/admin/check_login.php, pf/html/admin/common/adminperm.inc,
	pf/html/admin/common/helpers.inc, pf/html/admin/common.php, 
	pf/html/admin/configuration/fingerprint.php, 
	pf/html/admin/configuration/floatingnetworkdevice.php, 
	pf/html/admin/configuration/floatingnetworkdevice_add.php, 
	pf/html/admin/configuration/floatingnetworkdevice_edit.php, 
	pf/html/admin/configuration/index.php, 
	pf/html/admin/configuration/interfaces.php, 
	pf/html/admin/configuration/interfaces_add.php, 
	pf/html/admin/configuration/interfaces_edit.php, 
	pf/html/admin/configuration/main.php, 
	pf/html/admin/configuration/more_info.php, 
	pf/html/admin/configuration/networks.php, 
	pf/html/admin/configuration/networks_add.php, 
	pf/html/admin/configuration/networks_edit.php, 
	pf/html/admin/configuration/switches.php, 
	pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php, 
	pf/html/admin/configuration/violation.php, 
	pf/html/admin/configuration/violation_add.php, 
	pf/html/admin/configuration/violation_edit.php, 
	pf/html/admin/exporter.php, pf/html/admin/footer.php, 
	pf/html/admin/header.php, pf/html/admin/index.php, 